// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper renders text input 1`] = `
<TextField
  id="example"
  name="example"
  resize="both"
  type="text"
  value="Example Text"
/>
`;

exports[`TextFieldWrapper renders text input with an error 1`] = `
<TextField
  error="Oh no!"
  id="example"
  name="example"
  resize="both"
  type="text"
/>
`;
